# post-it

./: .env.example  README.md  pyproject.toml
post_it/: cli.py
